[package]
name = "the-key"
description = "A simple and fast key management tool for key-value stores"
keywords = ["rocksdb", "database", "key-value"]
version = "0.1.0-beta.1"
authors = ["Artur Aralin <artur.aralin97@gmail.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/ArturAralin/rust-the-key"
include = ["src/**/*", "README.md"]
license = "MIT"
